--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
 }
 
 body {
-    background-color: #0b1214;
-    padding: 5px;
+    background-color: #1a1e29;
+    padding: 0 5px 5px 5px;
     padding-bottom: 0;
     color: white;
     font-family: Verdana;
@@ -12,43 +12,55 @@ body {
 }
 
 .title {
-    background-color: #141b23;
+    background: linear-gradient(90deg, #132d46, #01acc383);
+    box-shadow: 0 0 10px #01acc380;
+    text-shadow: 0px 0px 10px #01acc3;
     padding: 3px;
     text-align: center;
-    border-radius: 25px;
+    border-radius: 10px;
+}
+
+label {
+    text-shadow: 0px 0px 10px #01acc3;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .form {
-    background-color: #141b23;
+    background-color: rgba(19, 45, 70, 0.8);
+    box-shadow: 0 0 10px #01acc380;
     padding: 5px;
     margin: 15px 0;
-    border-radius: 25px;
+    border-radius: 10px;
 }
 
 .user-container {
-    background-color: #1e2736;
+    background-color: rgba(19, 45, 70, 0.8);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     margin: 5px;
     padding: 15px 10px;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
 .user-container input {
     padding: 10px;
-    border-radius: 8px;
+    border-radius: 10px;
     border: none;
     width: 75%;
     margin-left: 10px;
     background-color: #ffffff10;
     color: white;
+    border: none;
+    outline: none;
     transition: box-shadow 0.3s ease-in-out;
+
 }
 
 .user-container input:focus {
-    box-shadow: 0px 0px 5px white; 
+    box-shadow: 0 0 10px #01acc380;
 }
 
 .options-container {
@@ -59,13 +71,13 @@ body {
 }
 
 .container {
-    background-color: #1e2736;
+    background-color: #ffffff10;
     display: flex;
     flex-direction: column;
     flex: 1;
     align-items: center;
     padding: 5px; 
-    border-radius: 15px;
+    border-radius: 10px;
     margin: 5px;
     height: 150px;
 }
@@ -81,26 +93,73 @@ body {
 
 select {
     width: 130px;
-    border-radius: 5px;
+    border-radius: 10px;
     text-align: left;
-    padding: 5px 25px;
+    padding: 5px 5px;
     margin: 5px;
-    font-weight: 12px;
+
+    outline: none;
+    background: #132d46;
+    color: white;
+    transition: 0.3s;
+    border: solid 1px #01acc3;
 }
 
 button {
-    background-color: #277e3a;
-    border: none;
+    padding: 10px;
+    margin: 5px 0 10px;
     border-radius: 5px;
+    background: #01acc3;
     color: white;
-    width: 130px;
-    padding: 5px 25px;
-    margin-top: 5px;
+    transition: 0.3s;
+    border: solid 1px #01acc3;
+    width: 90%;
     font-weight: bold;
+    box-shadow: 0 0 15px #01acc380;
 }
 
 footer {
     text-align: center;
     width: 100%;
     bottom: 0;
+}
+
+.notificacion {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px 20px;
+    border-radius: 10px;
+    font-size: 18px;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    min-width: 250px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    animation: fadeInOut 3s ease-in-out;
+}
+
+.notificacion img {
+    width: 30%;
+    height: 30%;
+}
+
+.notificacion.exito {
+    background-color: #277e3a;
+}
+
+.notificacion.error {
+    background-color: darkred ;
+}
+
+@keyframes fadeInOut {
+    0% { opacity: 0; transform: translate(-50%, -60%); }
+    10% { opacity: 1; transform: translate(-50%, -50%); }
+    90% { opacity: 1; transform: translate(-50%, -50%); }
+    100% { opacity: 0; transform: translate(-50%, -60%); }
 }
