--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,33 @@ label {
     box-shadow: 0 0 10px #01acc380;
 }
 
+.solution-container {
+    background-color: rgba(19, 45, 70, 0.8);
+    align-items: center;
+    margin: 5px;
+    padding: 15px 10px;
+    border-radius: 10px;
+    height: 25%;
+}
+
+.solution-container input {
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 10px;
+    border: none;
+    width: 92%;
+    background-color: #ffffff10;
+    color: white;
+    border: none;
+    outline: none;
+    transition: box-shadow 0.3s ease-in-out;
+
+}
+
+.solution-container input:focus {
+    box-shadow: 0 0 10px #01acc380;
+}
+
 .options-container {
     display: flex;
     flex-direction: row;
@@ -71,7 +98,7 @@ label {
 }
 
 .container {
-    background-color: #ffffff10;
+    background-color: rgba(19, 45, 70, 0.8);
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -83,7 +110,7 @@ label {
 }
 
 .container img {
-    width: 70%;
+    width: 50%;
     height: 50%;
     background-color: white;
     padding: 15px;
@@ -91,13 +118,28 @@ label {
     border-radius: 10px;
 }
 
+.instructions {
+    color: #01acc3;
+    padding: 0 15px;
+    margin: 0;
+}
+
+.instructions p, u {
+    font-size: 12px;
+}
+
+.instructions strong {
+    text-shadow: 0px 0px 10px #01acc3;
+    font-weight: bold;
+    color: white;
+}
+
 select {
-    width: 130px;
+    width: 100px; 
     border-radius: 10px;
     text-align: left;
-    padding: 5px 5px;
+    padding: 5px 1px;
     margin: 5px;
-
     outline: none;
     background: #132d46;
     color: white;
@@ -106,14 +148,14 @@ select {
 }
 
 button {
-    padding: 10px;
+    padding: 5px;
     margin: 5px 0 10px;
     border-radius: 5px;
     background: #01acc3;
     color: white;
     transition: 0.3s;
     border: solid 1px #01acc3;
-    width: 90%;
+    width: 70%;
     font-weight: bold;
     box-shadow: 0 0 15px #01acc380;
 }
@@ -162,4 +204,76 @@ footer {
     10% { opacity: 1; transform: translate(-50%, -50%); }
     90% { opacity: 1; transform: translate(-50%, -50%); }
     100% { opacity: 0; transform: translate(-50%, -60%); }
+}
+
+
+
+
+@media (min-width: 769px) {
+    .container {
+        background-color: #ffffff10;
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        align-items: center;
+        padding: 20px;
+        border-radius: 10px;
+        margin: 5px;
+        height: 200px;
+    }
+
+    .container img {
+        width: 70%;
+        height: 80%;
+        background-color: white;
+        padding: 15px;
+        margin: 3px;
+        border-radius: 10px;
+    }
+
+    select {
+        width: 150px;
+        border-radius: 10px;
+        text-align: left;
+        padding: 5px 5px;
+        margin: 5px;
+        outline: none;
+        background: #132d46;
+        color: white;
+        transition: 0.3s;
+        border: solid 1px #01acc3;
+        font-size: 18px;
+    }
+
+    button {
+        padding: 10px;
+        margin: 5px 0 10px;
+        border-radius: 5px;
+        background: #01acc3;
+        color: white;
+        transition: 0.3s;
+        border: solid 1px #01acc3;
+        width: 85%;
+        font-weight: bold;
+        box-shadow: 0 0 15px #01acc380;
+    }
+
+    label {
+        text-shadow: 0px 0px 10px #01acc3;
+        font-weight: bold;
+        font-size: 24px;
+    }
+
+    .instructions p, u {
+        font-size: 18px;
+    }
+
+    .instructions strong {
+        text-shadow: 0px 0px 10px #01acc3;
+        font-weight: bold;
+        font-size: 18px;
+        color: white;
+    }
+
+
 }
