--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,6 @@ label {
     margin: 5px;
     padding: 15px 10px;
     border-radius: 10px;
-    height: 25%;
 }
 
 .soporte-container {
@@ -204,6 +203,10 @@ button:active {
     transform: scale(1.1);
 }
 
+.logo {
+    display: none;
+}
+
 footer {
     text-align: center;
     width: 100%;
@@ -260,10 +263,54 @@ footer {
     100% { opacity: 0; transform: translate(-50%, -60%); }
 }
 
+.left {
+    display: none;
+}
+
 
 
 
 @media (min-width: 769px) {
+
+    body {
+        background-image: url('https://img.freepik.com/free-photo/blue-wavy-background_1048-3473.jpg?t=st=1744214804~exp=1744218404~hmac=0040e48…&w=996');
+        background-size: cover;
+        background-position: top;
+        background-repeat: no-repeat;
+    }
+
+    .main {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .title {
+        display: none;
+    }
+
+    .left {
+        width: 48%;
+        margin: 15px 0;
+        display: block;
+    }
+
+    .left-title {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .logo {
+        display: block;
+        width: 100px;
+    }
+
+    .form {
+        width: 48%;
+        background-color: rgb(255 255 255 / 5%);
+    }
+
     .container {
         background-color: #ffffff10;
         display: flex;
@@ -285,6 +332,21 @@ footer {
         border-radius: 10px;
     }
 
+    .user-container {
+        background-color: #ffffff10;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 5px;
+        padding: 15px 10px;
+        border-radius: 10px;
+    }
+
+    ::placeholder {
+        color: white;
+      }
+
     select {
         width: 150px;
         border-radius: 10px;
@@ -292,17 +354,45 @@ footer {
         padding: 5px 5px;
         margin: 5px;
         outline: none;
-        background: #132d46;
+        background: #ffffff10;
         color: white;
         transition: 0.3s;
         border: solid 1px #01acc3;
         font-size: 18px;
     }
 
+    optgroup {
+        color: black;
+    }
+
+    option {
+        color: black;
+    }
+
     label {
         text-shadow: 0px 0px 10px #01acc3;
         font-weight: bold;
         font-size: 24px;
+    }
+
+    .instructions {
+        display: none;
+    }
+
+    .instructions1 {
+        background-color: #ffffff10;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 5px;
+        padding: 0px 10px;
+        border-radius: 10px;
+    }
+
+    .left-title h1{
+        font-size: 50px;
+        margin-left: 15px;
     }
 
     .instructions p, u {
